<resources>
    <string name="app_name">Henry-SmartHome</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_main">Henry\'s Home</string>
    <string name="smart_home">Smart Home</string>
    <string name="menu_refresh">Refresh</string>
    <string name="hasdisconnected">Has Disconnected</string>
    <string name="hasalerted">Has Alerted</string>
    <string name="whether_to_clear_alerts">Whether to Clear Alerts</string>
    <string name="set_regulation">Set Regulation</string>
    <string name="internet_amp_local_host_address"><![CDATA[Internet & Local Host Address]]></string>
    <string name="local_host_address">Local Host Address</string>
    <string name="internet_host_address">Internet Host Address</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="change_user_amp_password"><![CDATA[Change User & Password]]></string>
    <string name="set">Set</string>
    <string name="change_login">" Change Login "</string>
    <string name="persistent">"Persistent "</string>
    <string name="alertable">"Alertable "</string>
    <string name="passive">"Passive "</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="nameortime">Name</string>
    <string name="change_datacenters_user">Change DataCenter\'s User</string>
    <string name="change_datacenters_password">Change DataCenter\'s Password</string>
    <string name="shown_password">******</string>
    <string name="default_user">Haven\'t Set User</string>
    <string name="default_localhostaddress">Haven\'t Set LocalHostAddress</string>
    <string name="default_internethostaddress">Haven\'t Set InternetHostAddress</string>
    <string name="modify">Modify</string>
    <string name="add_rule">Add Rule</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="cant_add_rule">Can\'t Add Rule, Reopen to try again</string>
    <string name="color">Color:</string>
    <string name="sleeptime">SleepTime</string>
    <string name="activetime">ActiveTime</string>
    <string name="period">Period</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="apparatus">Apparatus</string>
    <string name="electricity">Electricity</string>
    <string name="URL">URL</string>
    <string name="id">ID</string>
    <string name="DataFetch_SUCCESSFUL">DataFetch SUCCESSFUL</string>
    <string name="DataFetch_Failed_Try_Using_Backup_Data">DataFetch Failed-Try Using Backup-Data</string>
    <string name="No">No</string>
    <string name="Backup_Data">Backup-Data</string>
    <string name="Your_Device_is_Too_Slow_to_Show_The_Apparatuses">Your Device is Too Slow to Show The Apparatuses</string>
    <string name="Apparatus_Exceed_Bounds_of_Window_Got_to_Abandon_Some">Apparatuses Exceed Bounds of Window,Got to Abandon Some</string>
    <string name="Too_Many_Apparatus_Got_to_Abandon_Excessives">Too Many Apparatus,Got to Abandon Excessives</string>
    <string name="Connection_SUCCESSFUL">Connection SUCCESSFUL</string>
    <string name="Normal_Connection_Failed_Try_Directly_Connecting">Normal Connection Failed, Try Directly Connecting</string>
    <string name="Totally_NO_Connection_Cant_Connect">Totally NO Connection , Can\'t Connect</string>
    <string name="control">Control</string>
    <string name="statistics">Statistics</string>
    <string name="Login">Login</string>
    <string name="ApparatusConfiguration">ApparatusConfiguration</string>
    <string name="DebugConfiguration">DebugConfiguration</string>
    <string name="Settings">Settings</string>
    <string name="Successfully_Changed_Login">Successfully Changed Login</string>
    <string name="Failed_to_Connect">Failed to Connect</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
</resources>
