<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#c0000000"
    android:gravity="center"
    android:clickable="true">
    <ScrollView

        android:layout_width="@dimen/settings_width"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls"
        android:id="@+id/actualsettings"
        android:background="@color/default_backgroundColor"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:isScrollContainer="true"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/temperature"
                android:id="@+id/TitleText"/>
            <EditText
                android:layout_height="48sp"
                android:layout_alignParentStart="true"
                android:inputType="textUri"
                android:id="@+id/URLText"
                android:hint="@string/URL"
                android:layout_below="@id/TitleText"
                android:paddingStart="3dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:gravity="center|start"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="URLText"/>
            <TextView
                android:paddingStart="3dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:gravity="center|start"
                android:textSize="20sp"
                android:layout_width="50dp"
                android:layout_height="48sp"
                android:layout_below="@id/URLText"
                android:layout_alignStart="@+id/URLText"
                android:hint="@string/id"
                android:text="@string/id"
                android:ems="10"
                android:id="@+id/IDText"
                android:contentDescription="IDText"
                />
            <EditText
                android:paddingStart="3dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_alignTop="@id/IDText"
                android:layout_alignBottom="@id/IDText"
                android:layout_toEndOf="@+id/IDText"
                android:hint="@string/nameortime"
                android:ems="10"
                android:id="@+id/NameText"
                android:gravity="center|start"
                android:textSize="20sp"
                android:contentDescription="NameText"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/NameText"
                android:layout_alignBottom="@id/NameText"
                android:layout_alignParentEnd="true"

                android:id="@+id/ColorSet"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/color"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_marginStart="6dp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@color/default_colorPrimary"
                    android:id="@+id/ColorText"
                    android:contentDescription="ColorText"/>
            </LinearLayout>



            <Button
                android:text="@string/modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/IDText"
                android:layout_alignParentStart="true"
                android:id="@+id/ModifyButton"
                android:elevation="5dp"
                android:contentDescription="ModifyButton"/>
            <EditText

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/ModifyButton"
                android:layout_centerHorizontal="true"
                android:id="@+id/PeriodText"
                android:gravity="center"
                android:hint="@string/period"
                android:contentDescription="Count"/>
            <Button
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ModifyButton"
                android:layout_alignParentEnd="true"
                android:id="@+id/DoneButton"
                android:elevation="5dp"
                android:contentDescription="DoneButton"/>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>