<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mywork.henry.henry_smarthome.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:gravity="center"
        tools:ignore="ExtraText"
        android:id="@+id/AppBar"
        android:background="?attr/colorPrimary">

        <TextView
            android:transitionName="Title"
            android:layout_height="wrap_content"
            android:layout_width="155sp"
            android:text="@string/smart_home"
            android:textSize="25sp"
            android:id="@+id/Title_mainactivity"
            android:textColor="@color/My_Orange"
            android:textStyle="normal|bold|italic"
            android:gravity="center"
            android:elevation="1dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ToolbarHeight"
            android:background="?attr/colorPrimary"
            android:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            android:titleTextColor="@android:color/holo_green_dark"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:targetApi="m" />


    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"
        android:id="@+id/include" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/fab_animator"
        app:backgroundTint="@android:color/holo_green_light" />

    <Button
        android:layout_width="@dimen/buttonwidtht"
        android:layout_height="@dimen/buttonheight"
        app:layout_anchor="@+id/include"
        android:id="@+id/button1"
        app:layout_anchorGravity="bottom|end"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/control"
        android:background="@drawable/button_on"
        android:textColor="#fff6c916"
        android:textStyle="bold"
        android:visibility="invisible"
        android:gravity="center"
        />
    <Button
        android:layout_width="@dimen/buttonwidtht"
        android:layout_height="@dimen/buttonheight"
        app:layout_anchor="@+id/include"
        android:id="@+id/button2"
        app:layout_anchorGravity="bottom|center_vertical|right"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/statistics"
        android:textColor="#fff6c916"
        android:textStyle="bold"
        android:background="@drawable/button_off"
        android:gravity="center"
        android:visibility="invisible"
        />

    <com.mywork.henry.henry_smarthome.Refreshprogressbar
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="top|center_horizontal"
        android:layout_gravity="top|center_horizontal"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:indeterminateOnly="false"

        android:background="@drawable/refreshicon"
        android:max="100" />

    <Button
        android:layout_width="36dp"
        android:layout_height="35dp"
        app:layout_anchor="@+id/include"
        android:id="@+id/MainAddButton"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/add"
        android:textColor="#ffffffff"
        style="@style/CustomFloatingActionButtonStyle"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_anchorGravity="bottom|right"
        android:layout_gravity="center_vertical|center_horizontal"

        />


</android.support.design.widget.CoordinatorLayout>
